<resources>
    <string name="app_name">肚皮舞</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_tab_dance">舞台</string>
    <string name="main_tab_chat">聊天</string>
    <string name="main_tab_find">动态</string>
    <string name="main_tab_me">我的</string>
    <string name="title_dance">BellyDance</string>
    <string name="title_chat">BellyDance</string>
    <string name="title_find">BellyDance</string>
    <string name="title_me">BellyDance</string>
    <string name="title_login">登录</string>
    <string name="title_forget_pwd">忘记密码</string>
    <string name="title_register">注册</string>
    <string name="title_userinfo_edit">编辑个人信息</string>
    <string name="title_userinfo_check">查看更多资料</string>
    <string name="title_release">发布</string>
    <string name="title_media_preview">编辑</string>
    <string name="title_media_record">录制</string>
    <string name="title_media_choose">选择一个视频</string>
    <string name="title_choose_audio">选择歌曲</string>
    <string name="title_stage_detail">详情</string>
    <string name="title_edit_address">地址</string>
    <string name="title_setting">设置</string>
    <string name="title_all_dancer">全部舞者</string>
    <string name="title_release_moment">发布状态</string>
    <string name="title_moment">动态</string>
    <string name="title_image">图片</string>
    <string name="title_my_fans">我的粉丝</string>
    <string name="title_ta_fans">TA的粉丝</string>
    <string name="title_my_follows">我的关注</string>
    <string name="title_my_favorites">我的收藏</string>
    <string name="title_my_audio">我的音乐</string>
    <string name="title_my_video">我的视频</string>
    <string name="title_add_friend">添加好友</string>
    <string name="title_friend_list">我的好友</string>
    <string name="title_app_recommend">推荐</string>
    <string name="title_account">账号</string>
    <string name="title_modify_pwd">修改密码</string>
    <string name="title_change_phone">更换手机号码</string>
    <string name="title_change_email">更换邮箱地址</string>
    <string name="title_my_message">我的消息</string>
    <string name="title_report">投诉举报</string>
    <string name="title_feedback">帮助与反馈</string>
    <string name="title_blacklist">我的黑名单</string>
    <string name="menu_stage_release">发布舞台</string>
    <string name="menu_moment_release">发布动态</string>
    <string name="menu_all_dancer">全部舞者</string>
    <string name="menu_register">去注册</string>
    <string name="menu_login">去登录</string>
    <string name="menu_save">保存</string>
    <string name="menu_finish">完成</string>
    <string name="menu_message">消息</string>
    <string name="menu_setting">设置</string>
    <string name="menu_search">搜索</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_delete">删除</string>
    <string name="menu_add_friend">添加好友</string>
    <string name="menu_my_friends">我的好友</string>
    <string name="menu_next">下一步</string>
    <string name="menu_chat">聊天信息</string>
    <string name="menu_send">发送</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="send">发送</string>
    <string name="not_sdcard_error">没有SD卡</string>
    <string name="network_is_not_available">请检查网络是否可用</string>
    <string name="network_error">网络出错</string>
    <string name="network_connection_timed_out">连接超时</string>
    <string name="network_server_error">服务器错误，请稍后再试</string>
    <string name="token_error">用户不存在或者密码错误</string>
    <string name="location_error">定位失败</string>
    <string name="user_is_exist">该账号已注册</string>
    <string name="image_upload_fail">图片上传失败</string>
    <string name="unlogin_error">请先登录</string>
    <string name="loading">正在加载...</string>
    <string name="loading_login">正在登录...</string>
    <string name="loading_get_verify_code">正在获取验证码...</string>
    <string name="loading_register_create">正在注册...</string>
    <string name="loading_check_phone">正在检查手机是否注册...</string>
    <string name="loading_reset_pwd">正在重置密码...</string>
    <string name="loading_modify_pwd">正在修改密码...</string>
    <string name="loading_upload_image">正在上传图片...</string>
    <string name="loading_submit">正在提交...</string>
    <string name="loading_apply">正在提交申请...</string>
    <string name="loading_send_comment">正在发送评论...</string>
    <string name="loading_release">正在发布...</string>
    <string name="loading_signup_activity">正在报名活动...</string>
    <string name="loading_search">正在搜索...</string>
    <string name="loading_videos">正在加载视频...</string>
    <string name="uploading_video">正在上传视频%d%%...</string>
    <string name="loading_save">正在保存...</string>
    <string name="upload_cover">正在上传封面...</string>
    <string name="search_audio">正在搜索歌曲...</string>
    <string name="uploading_audio">正在上传歌曲...</string>
    <string name="loading_comment">正在评论...</string>
    <string name="loading_follow_cancel">正在取消关注...</string>
    <string name="downloading">正在下载...</string>
    <string name="loading_delete">正在删除...</string>
    <string name="login_please">请您登录</string>
    <string name="login_explain">登录后可以对内容点赞，收藏及评论等操作</string>
    <string name="login_name_hint">手机号码或邮箱</string>
    <string name="login_pwd_hint">输入密码</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login">登录</string>
    <string name="account_is_empty">账号不能为空</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="forget_pwd_hint">注册的手机号或邮箱</string>
    <string name="reset_pwd_success">密码重置成功</string>
    <string name="register_phone">请问您的手机号码是多少</string>
    <string name="register_phone_explain">手机号码将作为您的登录账号，我们不会公开您的号码</string>
    <string name="register_area_code_CN">中国 +86</string>
    <string name="register_phone_hint">手机号码</string>
    <string name="register_phone_support">手机号码注册目前只支持中国大陆用户</string>
    <string name="register_info_1">注册意味着您同意</string>
    <string name="register_info_2">与</string>
    <string name="register_info_3">，包括</string>
    <string name="register_info_4">。其他用户可以通过您所提供的邮件地址或手机号码找到您。</string>
    <string name="register_terms_of_service">服务条款</string>
    <string name="register_privacy_policy">隐私政策</string>
    <string name="register_content_agreement">内容发布协议</string>
    <string name="register_use_email">使用邮箱注册</string>
    <string name="register_email">请问您的邮箱地址是什么</string>
    <string name="register_email_explain">邮箱地址将作为您的登录账号，我们不会向您发送垃圾邮件</string>
    <string name="register_email_hint">邮箱地址</string>
    <string name="register_use_phone">使用手机注册</string>
    <string name="register_sms_code">已经向您发送了短信验证码</string>
    <string name="register_email_code">已经向您发送了邮箱验证码</string>
    <string name="register_sms_code_explain">每天最多可以获取3次验证码</string>
    <string name="register_sms_code_hint">输入短信验证码</string>
    <string name="register_email_code_hint">输入邮箱验证码</string>
    <string name="register_sms_code_resend">重新获取</string>
    <string name="register_pwd">设置密码</string>
    <string name="register_pwd_hint">输入密码</string>
    <string name="register_pwd_again_hint">再次输入密码</string>
    <string name="phone_num_is_empty">手机号不能为空</string>
    <string name="email_illegal">邮箱不合法</string>
    <string name="verify_code_is_empty">验证码不能为空</string>
    <string name="register_get_verify_code_success">验证码获取成功</string>
    <string name="register_check_verify_code_fail">验证码认证失败，请重试</string>
    <string name="pwd_is_empty">密码不能为空</string>
    <string name="pwd_confirm_is_empty">确认密码不能为空</string>
    <string name="pwds_is_unequal">输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="empty_text_1">宝宝也在问，内容哪去了？</string>
    <string name="stage">舞台</string>
    <string name="moment">动态</string>
    <string name="fans">粉丝</string>
    <string name="edit_user_info">编辑个人信息</string>
    <string name="check_user_info">查看更多资料</string>
    <string name="my_follow_num">我的关注：%s</string>
    <string name="my_favorite_num">我的收藏：%s</string>
    <string name="my_video_cache_num">我的视频：%d</string>
    <string name="my_audio_cache_num">我的音乐：%d</string>
    <string name="user_content_empty">您还没有发布过内容</string>
    <string name="other_user_content_empty">TA还没有发布过内容</string>
    <string name="my_stage">我的舞台</string>
    <string name="my_moment">我的动态</string>
    <string name="ta_stage">TA的舞台</string>
    <string name="ta_moment">TA的动态</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_hint">设置个性昵称</string>
    <string name="brief_hint">做个自我介绍，让大家更了解您</string>
    <string name="brief_hint_2">TA还没有自我介绍</string>
    <string name="address">地区</string>
    <string name="sex">性别</string>
    <string name="my_sex_boy">男</string>
    <string name="my_sex_girl">女</string>
    <string name="my_sex_secret">保密</string>
    <string name="edit_address">手动输入</string>
    <string name="address_edit_tip_1">请输入您所在的国家和城市的中文名称</string>
    <string name="address_edit_tip_2">例如：中国 西安</string>
    <string name="address_location">正在定位...</string>
    <string name="address_location_tip">正在定位,请稍后</string>
    <string name="address_location_fail">定位失败</string>
    <string name="address_location_fail_2">定位失败,请尝试手动输入</string>
    <string name="address_empty">请输入地址</string>
    <string name="nickname_is_empty">昵称不能为空</string>
    <string name="address_is_empty">请设置地址</string>
    <string name="sex_is_empty">请选择性别</string>
    <string name="add_friend">加好友</string>
    <string name="is_a_friend">已是好友</string>
    <string name="start_chat">开始聊天</string>
    <string name="cancel_follow">取消关注</string>
    <string name="ta_follow">关注TA</string>
    <string name="ignore">忽略</string>
    <string name="agree">同意</string>
    <string name="apply_friend_success">添加好友申请已发送</string>
    <string name="agree_friend_apply">添加好友成功</string>
    <string name="dialog_choose_sex">选择您的性别</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="video">视频</string>
    <string name="image">图片</string>
    <string name="video_shoot">拍摄</string>
    <string name="picture_shoot">拍照</string>
    <string name="album">相册</string>
    <string name="video_desc">发布一个视频，时长不超过6分钟</string>
    <string name="image_desc">发布图片，最多发布9张</string>
    <string name="release_content_hint">写点什么吧~~~</string>
    <string name="release_agreement">我已经阅读并同意上述协议 >></string>
    <string name="agreement_unselect">确认同意协议才能发布</string>
    <string name="cancel">取消</string>
    <string name="default_cover">现在为默认封面，滑动设置新的封面</string>
    <string name="record_video_transcoding_faild">视频处理失败</string>
    <string name="record_camera_progress_message">正在处理…</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="media_delete_confirm">作品尚未保存，确认要取消吗？</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="upload_video_fail">上传视频失败</string>
    <string name="upload_video_success">上传视频成功</string>
    <string name="record_preview_building">视频生成中…</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="wechat_share">微信好友</string>
    <string name="wechat_circle_share">微信朋友圈</string>
    <string name="facebook_share">脸书</string>
    <string name="weibo_share">新浪微博</string>
    <string name="qq_share">QQ好友</string>
    <string name="reply">回复</string>
    <string name="copy">复制</string>
    <string name="report">举报</string>
    <string name="cache_video">缓存视频</string>
    <string name="cache_audio">缓存音乐</string>
    <string name="share_to">分享到</string>
    <string name="edit_phone_num_hint">填写手机号码</string>
    <string name="search">搜索</string>
    <string name="search_tip">输入用户昵称</string>
</resources>