<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_code_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/register_sms_code"
            android:textColor="@color/black_1"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_sms_code_explain"
            android:textColor="@color/black_2"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_sms_code"
                style="@style/MyEditText"
                android:layout_weight="1"
                android:hint="@string/register_sms_code_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_1" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/text_resend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register_sms_code_resend"
            android:textColor="@color/actionbar_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_blue_round_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/layout_bottom"
        android:background="@color/divider_1" />
</RelativeLayout>
