<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/share_to"
        android:textColor="@color/black_2"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_share_we_chat_friend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_wechat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/wechat_share"
                android:textColor="@color/gray_1"
                android:textSize="11sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_share_wechat_circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_wechat_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/wechat_circle_share"
                android:textColor="@color/gray_1"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_share_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/facebook_share"
                android:textColor="@color/gray_1"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_share_weibo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_weibo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/weibo_share"
                android:textColor="@color/gray_1"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_share_qq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/qq_share"
                android:textColor="@color/gray_1"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_1" />
    <TextView
        android:id="@+id/text_cache_video"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/item_selector"
        android:gravity="center"
        android:text="@string/cache_video"
        android:textColor="@color/black_2"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_cache_video_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_1" />

    <TextView
        android:id="@+id/text_cache_audio"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/item_selector"
        android:gravity="center"
        android:text="@string/cache_audio"
        android:textColor="@color/black_2"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_cache_audio_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_1" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/item_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black_2"
        android:textSize="14sp" />

</LinearLayout>