<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.knigego.nimo.demoregister.ui.activities.RegisterPhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/register_phone"
            android:textColor="@color/black_1"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_phone_explain"
            android:textColor="@color/black_2"
            android:textSize="11sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/register_area_code_CN"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/edit_phone_num"
                    style="@style/MyEditText"
                    android:layout_weight="1"
                    android:hint="@string/edit_phone_num_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_phone_explain"
            android:textColor="@color/gray_1"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/text_register_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:textColor="@color/gray_1"
            android:textSize="11sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <TextView
            android:id="@+id/text_register_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register_use_email"
            android:textColor="@color/actionbar_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_blue_round_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/layout_bottom"
        android:background="@color/divider_1" />
</RelativeLayout>
