<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_search_content"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="9dp"
            android:layout_weight="1"
            android:background="@drawable/edit_comment_bg"
            android:gravity="center_vertical"
            android:hint="@string/search_tip"
            android:imeOptions="actionSearch"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/black_2"
            android:textColorHint="@color/gray_1"
            android:textCursorDrawable="@drawable/bg_edit_cursor"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black_2"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dcdfe7"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_dancer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rc_btn_send"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>
